deploy/kubernetes/service/route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: www-redirect
spec:
  redirectRegex:
    regex: ^https://www.imagehiding.com(.*)
    replacement: https://imagehiding.com${1}
    permanent: true
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: web-route
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`imagehiding.com`) || Host(`www.imagehiding.com`)
      kind: Rule
      middlewares:
        - name: www-redirect
      services:
        - name: web-svc
          kind: Service
          port: 80
  tls:
    secretName: web-cert
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: api-route
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`api.imagehiding.com`)
      kind: Rule
      services:
        - name: api-svc
          kind: Service
          port: 80
  tls:
    secretName: api-cert
